discussion/kv_engine/173498/173498_rev31_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Replace full CM scans with variables updated in-place

Instead of looping through every checkpoint owned
by the CheckpointManager and summing the individual
stats, create CM-level variables which are updated
in-place by Checkpoint MemoryCounters.

Change-Id: I369046cc1d966204e92a35c45799acd01d1d7b70

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-27 13:26:42.000000000
Message: 
Patch Set 31: Patch Set 30 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 13:48:27.000000000
Message: 
Patch Set 31: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38405/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38405/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17066/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:87:13: error: no member named "memUsage" in "CheckpointManager" [clang-diagnostic-error]
    manager.memUsage += checkpointSize;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:649:14: error: no member named "memUsage" in "CheckpointManager" [clang-diagnostic-error]
    manager->memUsage -= checkpointSize;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17066/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17066/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45724/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint.cc(87): error C2039: "memUsage": is not a member of "CheckpointManager" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6815/ : FAILURE

Compile error at [2022-04-27T13:44:03.030Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: ?class CheckpointManager? has no member named ?memUsage?; did you mean ?getMemUsage??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6815/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27268/ : FAILURE

Compile error at [2022-04-27T13:44:31.134Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27268/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6722/ : FAILURE

Compile error at [2022-04-27T13:45:51.768Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6722/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18851/ : FAILURE

Compile error at [2022-04-27T13:46:17.548Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: ?class CheckpointManager? has no member named ?memUsage?; did you mean ?getMemUsage??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17991/ : FAILURE

Compile error at [2022-04-27T13:44:16.067Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19195/ : FAILURE

Compile error at [2022-04-27T13:47:55.140Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: ?class CheckpointManager? has no member named ?memUsage?; did you mean ?getMemUsage??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19893/ : FAILURE

Compile error at [2022-04-27T13:45:41.869Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19893/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16034/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
